--- a/templates/deviceused.html
+++ b/templates/deviceused.html
@@ -126,6 +126,7 @@
 </head>
 <body>
 <a href="/home" class="btn btn-primary btn-sm" style="position: absolute; top: 20px; left: 20px;">Home</a>
+<a href="/form" class="btn btn-primary btn-sm" style="position: absolute; top: 20px; right: 20px;">Form</a>
 
    <h1 class="title">
   <span class="typewriter">DATA ANALYTICS AGES :</span>
@@ -158,7 +159,7 @@
 </div>
 
 <div class="download-btn">
-    <a href="#" class="btn btn-lg btn-primary">Download</a>
+    <a href="/download_pdf" class="btn btn-lg btn-primary">Download</a>
 </div>
     </div>
 </body>
