--- a/templates/home.html
+++ b/templates/home.html
@@ -47,6 +47,8 @@
     </style>
 </head>
 <body>
+<a href='/form' class="btn btn-primary btn-sm" style="position: absolute; top: 20px; right: 20px;">Form</a>
+
     <h1>Welcome to the Home Page</h1>
     <div class="btn-container">
         <a href="/about">About</a>
