--- a/templates/about.html
+++ b/templates/about.html
@@ -99,7 +99,7 @@
             </div>
         </div>
         <div class="profile">
-            <img src="../static/profile/harsh.jpg" alt="Harsh Manalel">
+            <img src="../static/profile/harsh.jpeg" alt="Harsh Manalel">
             <div class="profile-details">
                 <div class="profile-name">Harsh Manalel</div>
                 <div class="profile-specialization">Python and AI-powered applications</div>
