--- a/templates/favsport.html
+++ b/templates/favsport.html
@@ -137,16 +137,16 @@
     <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img class="d-block w-100" src="../static/sample/samp1.png" alt="Image 1">
+                <img class="d-block w-100" src="../static/Sports/box.jpg" alt="Image 1">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="../static/sample/samp2.png" alt="Image 2">
+                <img class="d-block w-100" src="../static/Sports/bar.jpg" alt="Image 2">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="../static/sample/samp3.png" alt="Image 3">
+                <img class="d-block w-100" src="../static/Sports/pie.jpg" alt="Image 3">
             </div>
             <div class="carousel-item">
-                <img class="d-block w-100" src="../static/sample/samp4.png" alt="Image 4">
+                <img class="d-block w-100" src="../static/Sports/hist.jpg" alt="Image 4">
             </div>
                 <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
         <span class="carousel-control-prev-icon" aria-hidden="true"></span>
