--- a/templates/about.html
+++ b/templates/about.html
@@ -94,33 +94,33 @@
             <img src="../static/profile/Anuj.jpg" alt="Anuj Dwivedi">
             <div class="profile-details">
                 <div class="profile-name">Anuj Dwivedi</div>
-                <div class="profile-specialization">Natural Language Processing and Machine Learning</div>
-                <a class="profile-link" href="#">View Profile</a>
+
+                <a class="profile-link" href="https://www.projectai.me">View Profile</a>
             </div>
         </div>
         <div class="profile">
-            <img src="../static/profile/harsh.jpeg" alt="Harsh Manalel">
+            <img src="../static/profile/harsh-k.jpeg" alt="Harsh Manalel">
             <div class="profile-details">
                 <div class="profile-name">Harsh Manalel</div>
-                <div class="profile-specialization">Python and AI-powered applications</div>
-                <a class="profile-link" href="#">View Profile</a>
+
+                <a class="profile-link" href="http://linktr.ee/DemonicHM">View Profile</a>
             </div>
         </div>
         <div class="profile">
             <img src="../static/profile/divith.jpg" alt="Divith BS">
             <div class="profile-details">
                 <div class="profile-name">Divith BS</div>
-                <div class="profile-specialization">Computer Vision and Deep Learning</div>
-            <div class="profile-link" href="#">View Profile</a>
+
+            <div class="profile-link" href="https://linktr.ee/divithbs">View Profile</a>
             </div>
         </div>
     </div>
         <div class="profile">
             <img src="../static/profile/ashish.jpg" alt="Divith BS">
             <div class="profile-details">
-                <div class="profile-name">Ashsih Patil</div>
-                <div class="profile-specialization">Computer Vision and Deep Learning</div>
-            <div class="profile-link" href="#">View Profile</a>
+                <div class="profile-name">Ashish Patil</div>
+
+            <div class="profile-link" href="https://linktr.ee/ashishpa222">View Profile</a>
             </div>
         </div>
 </body>
