--- a/templates/about.html
+++ b/templates/about.html
@@ -168,6 +168,9 @@
             <div class="profile-link" href="https://linktr.ee/ashishpa222">View Profile</a>
             </div>
         </div>
+        </div>
+    </div>
+
 </body>
 </html>
 
