--- a/templates/form.html
+++ b/templates/form.html
@@ -1,6 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
+
+       <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
     <title>Form</title>
 <style>
 /* Set purple and pink background */
@@ -150,6 +156,7 @@ form select:focus {
 
 </head>
 <body>
+<a href="/home" class="btn btn-primary btn-sm" style="position: absolute; top: 20px; left: 20px;">Home</a>
      <h1 class="title">
   <span class="typewriter">DATA ANALYTICS FORM :</span>
 </h1>
