--- a/templates/home.html
+++ b/templates/home.html
@@ -48,7 +48,7 @@
 </head>
 <body>
 
-<a href="https://data-visualization-server-face.vercel.app/" class="btn btn-primary btn-sm" style="position: absolute; top: 20px; left: 20px;">Server-Face</a>
+<a href="https://data-visualization-server-face.vercel.app/" class="btn btn-primary btn-sm" style="position: absolute; top: 20px; left: 20px;">Server</a>
 <a href='/form' class="btn btn-primary btn-sm" style="position: absolute; top: 20px; right: 20px;">Form</a>
 
     <h1>Welcome to the Home Page</h1>
